# etch

./: .gitignore  README.md
.github/workflows/: ci.yml
art-preview/: index.html  package-lock.json  package.json  v2.html  v3-svg.html  v4-optimized.html
contracts/: README.md
contracts/src/: Etch.sol  EtchFactory.sol  IdentityRegistry.sol
contracts/test/: Etch.t.sol  EtchFactory.t.sol
contracts/zkout/Bytes.sol/: Bytes.json
contracts/zkout/ERC165.sol/: ERC165.json
contracts/zkout/ERC721.sol/: ERC721.json
contracts/zkout/ERC721Enumerable.sol/: ERC721Enumerable.json
contracts/zkout/ERC721Utils.sol/: ERC721Utils.json
contracts/zkout/Etch.sol/: Etch.json
contracts/zkout/EtchFactory.sol/: EtchFactory.json
contracts/zkout/EtchFactory.t.sol/: EtchFactoryTest.json
contracts/zkout/IERC165.sol/: IERC165.json
contracts/zkout/IERC721.sol/: IERC721.json
contracts/zkout/IERC721Enumerable.sol/: IERC721Enumerable.json
contracts/zkout/IERC721Metadata.sol/: IERC721Metadata.json
contracts/zkout/IERC721Receiver.sol/: IERC721Receiver.json
contracts/zkout/IMulticall3.sol/: IMulticall3.json
contracts/zkout/Math.sol/: Math.json
docs/: x402-current-blockers.md  x402-notarize-api-spec.md  x402scan-submission-payload.md
scripts/: generate-art.js  generate-metadata-uri.js  package-lock.json  package.json
server/: Cargo.toml  README.md
server/src/: contracts.rs  main.rs  mcp.rs  tools.rs
web/: README.md  next.config.ts  package-lock.json  package.json
web/scripts/: test-agent-lookup.mts  test-agent-profile.mts  test-metadata-size.mts  x402-e2e-smoke.mts
(+64 files in other folders)
