[package]
name = "etch-mcp-server"
version = "0.1.0"
edition = "2021"
description = "MCP server for ETCH onchain records on Abstract"

[dependencies]
alloy = { version = "1", features = [
    "full",
    "sol-types",
] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
